--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="text-gray-600 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-            <img src="images/202111.png" width="50px" height="50px" srcset="">
+            <img src="Images/202111.png" width="50px" height="50px" srcset="">
             <span style="color:blue; font-family: 'Roboto Mono', monospace;" class="ml-3 text-2xl">APNI DUKAN</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
@@ -56,7 +56,7 @@
               <section class="text-gray-600 body-font overflow-hidden">
   <div class="container px-5 py-24 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="images/photooooooooooo.jpg">
+      <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="Images/photooooooooooo.jpg">
       <div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mt-6 lg:mt-0" style="padding-left:5em;" >
       
         <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">Samita das</h1>
