added login button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
           <a href="https://kartikthakur7107.github.io/ApniDukan/location.html"><button class="inline-flex text-white bg-indigo-500 border-1 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Serviceable Areas</button></a>
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
+            <a href="https://kartikthakur7107.github.io/ApniDukan/login/login.html"><button class="inline-flex text-white bg-indigo-500 border-1 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" style="margin-left: 0.5em;">Login</button></a>
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+          </svg>
+          
         </div>
       </header>
          <hr width="5000px;">
