--- a/handles.html
+++ b/handles.html
@@ -8,6 +8,6 @@
 </head>
 <body style="text-align: center; text-decoration: underline;" >
    <i> <strong><h1>Looking Forward To Create Social Media Handles Soon In The Future</strong></h1></i>
-  <a href="https://kartikthakur7107.github.io/ApniDukan/index.html"> <h1 style="color:blue;">HOMEPAGE</h1></a>
+  <a href="https://kartikthakur7107.github.io/Apnidukan/index.html"> <h1 style="color:blue;">HOMEPAGE</h1></a>
 </body>
 </html>
